# beads_rust

./: .gitignore  AGENTS.md  AGENT_FRIENDLINESS_REPORT.md  Cargo.toml  EXISTING_BEADS_STRUCTURE_AND_ARCHITECTURE.md  README.md  install.sh  rustc-ice-2026-01-16T14_36_25-336281.txt  rustc-ice-2026-01-16T18_31_05-709219.txt
.beads/: issues.jsonl
.github/workflows/: ci.yml  release.yml
benches/: storage_perf.rs
crates/beads-lib/: Cargo.toml  USAGE.md
crates/beads-lib/src/: error.rs  jsonl.rs  lib.rs  model.rs  query.rs  store.rs  util.rs
packaging/aur/: PKGBUILD
packaging/homebrew/: br.rb
packaging/scoop/: br.json
src/: lib.rs  logging.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  routing.rs
src/error/: mod.rs  structured.rs
src/format/: markdown.rs  mod.rs  output.rs  text.rs
src/model/: mod.rs
src/sync/: mod.rs  (+2 more)
target.old.1768660928/: .rustc_info.json
tests/: benchmark_comparison.rs  conformance.rs  conformance_edge_cases.rs  conformance_schema.rs  conformance_text_output.rs  conformance_workflows.rs  debug_sync_status.rs  e2e_audit.rs  e2e_basic_lifecycle.rs  e2e_claim_atomic.rs  e2e_comments.rs  e2e_completions.rs  e2e_concurrency.rs  e2e_env_overrides.rs  e2e_epic.rs  e2e_errors.rs  e2e_history.rs  e2e_history_restore_prune.rs  e2e_labels.rs  e2e_list_comprehensive.rs  e2e_list_priority.rs  e2e_orphans.rs  e2e_queries.rs  e2e_relations.rs  e2e_sync_artifacts.rs  e2e_sync_failure_injection.rs  e2e_sync_fuzz_edge_cases.rs  e2e_version.rs  markdown_import.rs  repro_create_path_traversal_check.rs  repro_list_sort_alias.rs  storage_deps.rs
(+177 files in other folders)
