[package]
name = "beads-lib"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "In-process beads issue tracking library (no SQLite)"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "2.0.18"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cast_precision_loss = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
uninlined_format_args = { level = "allow", priority = 1 }
format_push_string = { level = "allow", priority = 1 }
